# faulthandler-spam

./: README.md  build.bat  test.py
test_module/: CMakeLists.txt  module.cpp  setup.py
